@@ -1,6 +1,7 @@
 - extended predicates/mapping functions for seq and coll utils
 - added str_join()
 - added @collecting and @joining()
+- added sums() and isums()
 - better docs
 
 0.3.4
